--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ section h2 {
 }
 
 .exp-row.reverse {
-  flex-direction: row-reverse; /* text left, media right */
+  flex-direction: row; /* text left, media right */
 }
 
 .exp-text {
