--- a/style.css
+++ b/style.css
@@ -111,7 +111,9 @@ section h2 {
 
 /* Experience */
 /* Page heading */
-.experience h2 {
+.experience h2,
+.projects h2,
+.research h2 {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 700;
@@ -122,7 +124,9 @@ section h2 {
 }
 
 /* Accent bar under "Experience" */
-.experience h2::after {
+.experience h2::after 
+.projects h2::after
+.research h2:: after {
   content: "";
   display: block;
   width: 60px;               /* length of the bar */
@@ -237,26 +241,6 @@ section h2 {
 
 
 /* Projects */
-/* Centered section title */
-.projects h2 {
-  text-align: center;
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-  font-family: 'Playfair Display', serif;
-  color: #333;
-  position: relative;
-}
-
-.projects h2::after {
-  content: "";
-  display: block;
-  width: 60px;
-  height: 4px;
-  background-color: #4B7F52;
-  margin: 0.5rem auto 2rem auto;
-  border-radius: 2px;
-}
 
 /* Project navigation buttons */
 .project-buttons {
